--- a/styles.css
+++ b/styles.css
@@ -342,3 +342,20 @@ form input[type="submit"]:hover {
   width: 100%;
   height: auto;
 }
+
+#timeofday {
+  font-family: Arial, Helvetica, sans-serif;
+  color: #3a3a3a;
+  background: linear-gradient(
+    0deg,
+    rgba(251, 215, 139, 1) 0%,
+    rgba(118, 213, 245, 1) 100%
+  );
+  text-align: center;
+  height: 40px;
+  padding-top: 18px;
+}
+
+#clock {
+  color: #125688;
+}
