--- a/styles.css
+++ b/styles.css
@@ -293,7 +293,7 @@ form input[type="submit"] {
   width: 100px;
   padding: 0.5em;
   font-size: 1em;
-  background-color: #4977d1;
+  /* background-color: #4977d1; */
   color: #fff;
   border: none;
   cursor: pointer;
@@ -358,4 +358,21 @@ form input[type="submit"]:hover {
 
 #clock {
   color: #125688;
+}
+
+.randomcode {
+  margin-left: 290px;
+}
+
+.randomcode input[type="text"] {
+  display: inline-block;
+  width: 160px;
+  margin-bottom: 0;
+}
+
+.randomcode p {
+  display: inline-block;
+  background-color: lightgray;
+  margin: 8px 0px 0px 16px;
+  padding: 15px;
 }
