--- a/styles.css
+++ b/styles.css
@@ -213,10 +213,39 @@ th:first-child {
   background: #bde1ff;
 }
 
-.selected {
+.tdhighlight {
   background-color: #90ee90 !important; /* Light Green Highlight */
   font-weight: bold;
   color: white;
+}
+
+#activities main #displaySelected {
+  visibility: hidden;
+  margin: 0 auto;
+  width: 600px;
+  border: 2px solid #9ed034;
+  padding: 0.75em;
+}
+
+#activities main #displaySelected #result,
+#activities main #displaySelected #sendinfo {
+  display: inline-block;
+  margin: 0;
+}
+
+#activities main #result {
+  min-height: 50px;
+  width: 300px;
+  padding: 0;
+}
+
+#activities main #result h4 {
+  margin-bottom: 1em;
+  font-size: 1.15em;
+}
+
+#activities main #displaySelected #sendinfo input[type="email"] {
+  width: 200px;
 }
 
 /* Contacts */
