--- a/styles.css
+++ b/styles.css
@@ -254,18 +254,6 @@ form {
   margin-top: 2em;
 }
 
-th:first-child {
-  width: 125px;
-  height: 50px;
-  background: #4977d1;
-  color: #fff;
-}
-
-td:first-child {
-  font-weight: bold;
-  background: #bde1ff;
-}
-
 legend {
   font-weight: bold;
   color: #4977d1;
@@ -424,4 +412,58 @@ form input[type="submit"]:hover {
   padding: 15px;
   width: 82px;
   text-align: center;
+}
+
+/* Lightbox */
+
+.lightbox-toggle {
+  color: black;
+}
+
+.backdrop {
+  z-index: 1;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  display: none;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background: #000;
+}
+.box {
+  z-index: 2;
+  position: fixed;
+  opacity: 1;
+  display: none;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: auto;
+  height: auto;
+  width: 600px;
+  background: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  -moz-box-shadow: 0px 0px 5px #444444;
+  -webkit-box-shadow: 0px 0px 5px #444444;
+  box-shadow: 0px 0px 5px #444444;
+}
+
+* {
+  z-index: 3;
+}
+
+.close {
+  float: right;
+  cursor: pointer;
+}
+
+#gallery #photo a img {
+  width: 400px;
+}
+
+.box img {
+  width: 100%;
 }
